Updated the backend/frontend stuff to now be able to interact with the Controller as well.